[package]
name = "power-consistent-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6"
rand_pcg = "0.3"
thiserror = "1"
tracing = { version = "0.1", features = ["release_max_level_debug"] }

[dev-dependencies]
tracing-subscriber = "0.3"
criterion = "0.5"

[[bench]]
name = "pch_benchmark"
harness = false
