[package]
name = "power-consistent-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6"
rand_pcg = "0.3"
thiserror = "1"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
seahash = { version = "4.1", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[features]
seahash = ["dep:seahash"]
seahash-bench = ["seahash", "dep:uuid"]

[dev-dependencies]
tracing-subscriber = "0.3"
criterion = "0.5"

[[bench]]
name = "pch_benchmark"
harness = false

[[bench]]
name = "seahash_pch_benchmark"
harness = false
required-features = ["seahash-bench"]
