[package]
name = "power-consistent-hash"
version = "0.1.0"
authors = ["Rinat Shigapov <rinatshigapov@gmail.com>"]
edition = "2021"
description = "Power consistent hash - constant expected time constant memory consistent hash"
readme = "README.md"
repository = "https://github.com/DXist/power-consistent-hash"
license = "Apache-2.0"
keywords = ["consistent-hashing", "load-balancing", "sharding"]
categories = ["algorithms"]
exclude = ["*.svg"]

[dependencies]
thiserror = "1"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
seahash = { version = "4.1", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[features]
seahash = ["dep:seahash"]
seahash-bench = ["seahash", "dep:uuid"]

[dev-dependencies]
tracing-subscriber = "0.3"
criterion = "0.5"

[[bench]]
name = "pch_benchmark"
harness = false

[[bench]]
name = "seahash_pch_benchmark"
harness = false
required-features = ["seahash-bench"]
